photos resized,main margin

--- a/index.html
+++ b/index.html
@@ -19,43 +19,37 @@
       <div class="tile">
         <img src="https://unsplash.it/400/500?random=1234569" alt="">
         <div class="imgbutton">
-          <a href="#">Edit</a>
-          <a href="#">Delete</a>
+          <span><a href="#">Edit</a> | <a href="#">Delete</a>
         </div>
       </div>
       <div class="tile">
         <img src="https://unsplash.it/400/500?random=1234567" alt="">
         <div class="imgbutton">
-          <a href="#">Edit</a>
-          <a href="#">Delete</a>
+          <span><a href="#">Edit</a> | <a href="#">Delete</a>
         </div>
       </div>
       <div class="tile">
         <img src="https://unsplash.it/400/500?random=1234562" alt="">
         <div class="imgbutton">
-          <a href="#">Edit</a>
-          <a href="#">Delete</a>
+          <span><a href="#">Edit</a> | <a href="#">Delete</a>
         </div>
       </div>
       <div class="tile">
         <img src="https://unsplash.it/400/500?random=1234568" alt="">
         <div class="imgbutton">
-          <a href="#">Edit</a>
-          <a href="#">Delete</a>
+          <span><a href="#">Edit</a> | <a href="#">Delete</a>
         </div>
       </div>
       <div class="tile">
         <img src="https://unsplash.it/400/500?random=1234563" alt="">
         <div class="imgbutton">
-          <a href="#">Edit</a>
-          <a href="#">Delete</a>
+          <span><a href="#">Edit</a> | <a href="#">Delete</a>
         </div>
       </div>
       <div class="tile">
         <img src="https://unsplash.it/400/500?random=1234565" alt="">
         <div class="imgbutton">
-          <a href="#">Edit</a>
-          <a href="#">Delete</a>
+          <span><a href="#">Edit</a> | <a href="#">Delete</a>
         </div>
       </div>
     </main>
